Fixed areas_wrap id and texture display
Also fixed some margins

--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -107,7 +107,12 @@ small.required {
 
 small.extra-required {
     font-size: 70%;
-    /*margin: -15px 0px 0px 15px;*/
+}
+
+textarea {
+    width: 100%;
+    min-height: 50px;
+    height: 150px;
 }
 
 /* todo: come up with a way to generalize these tags */
@@ -117,43 +122,35 @@ select#heading {
 }
 
 div#cke_biography {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_courses {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_awards {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_publications {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_presentations {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_certificates {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_organizations {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 div#cke_hobbies {
-    margin-left: 15px;
-    margin-bottom: 10px;
+    margin: 0px 15px 10px 15px;
 }
 
 @media (min-width: 992px) {
